--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 12:44:00 PM</p>
+    <p class="lastupdate">09/08/2020 12:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">92.0&#176;F</td>
+        <td class="data">92.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">92.0&#176;F</td>
+        <td class="data">92.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">92.0&#176;F</td>
+        <td class="data">92.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.0&#176;F</td>
+        <td class="data">49.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">24%</td>
+        <td class="data">23%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.587 inHg (-0.046)</td>
+        <td class="data">29.589 inHg (-0.042)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph SSW (202&#176;)</td>
+        <td class="data">1 mph ESE (112&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">82.4&#176;F</td>
+        <td class="data">82.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:41:00 PM">
-            92.1</span><br/>
+          <span title="12:49:00 PM">
+            92.8</span><br/>
           <span title="07:33:29 AM">
             63.0</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:41:00 PM" class="hival">
-            92.1</span>
+          <span title="12:49:00 PM" class="hival">
+            92.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:51:13 AM">
             55</span><br/>
-          <span title="12:39:56 PM">
-            24</span>
+          <span title="12:46:46 PM">
+            23</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:20:19 AM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          355
+          2
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 21 hours, 57 minutes</td>
+      <td class="data">6 days, 22 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 21 hours, 57 minutes</td>
+      <td class="data">6 days, 22 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
