--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 12:54:00 PM</p>
+    <p class="lastupdate">09/08/2020 12:59:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">93.3&#176;F</td>
+        <td class="data">93.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">93.3&#176;F</td>
+        <td class="data">93.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">93.3&#176;F</td>
+        <td class="data">93.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">48.7&#176;F</td>
+        <td class="data">46.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">22%</td>
+        <td class="data">20%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.587 inHg (-0.039)</td>
+        <td class="data">29.587 inHg (-0.036)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph W (270&#176;)</td>
+        <td class="data">1 mph ESE (112&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">82.6&#176;F</td>
+        <td class="data">82.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:53:38 PM">
-            93.4</span><br/>
+          <span title="12:58:56 PM">
+            93.8</span><br/>
           <span title="07:33:29 AM">
             63.0</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:53:38 PM" class="hival">
-            93.4</span>
+          <span title="12:58:56 PM" class="hival">
+            93.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:51:13 AM">
             55</span><br/>
-          <span title="12:49:20 PM">
-            22</span>
+          <span title="12:57:00 PM">
+            20</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:20:19 AM (Monday)">
@@ -305,32 +305,32 @@
         <td class="data new_row hilo_day">
           <span title="12:02:01 AM">
             29.650</span><br/>
-          <span title="12:36:02 PM">
-            29.587</span>
+          <span title="12:57:02 PM">
+            29.586</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="12:36:02 PM (Tuesday)">
-            29.587</span>
+          <span title="12:57:02 PM (Tuesday)">
+            29.586</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/08/2020 12:36:02 PM">
-            29.587</span>
+          <span title="09/08/2020 12:57:02 PM">
+            29.586</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/08/2020 12:36:02 PM">
-            29.587</span>
+          <span title="09/08/2020 12:57:02 PM">
+            29.586</span>
         </td>
         <td class="data new_row hilo_rainyear">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/08/2020 12:36:02 PM">
-            29.587</span>
+          <span title="09/08/2020 12:57:02 PM">
+            29.586</span>
         </td>
         <td class="units"> inHg</td>
       </tr>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          5
+          9
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          355
+          356
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 22 hours, 7 minutes</td>
+      <td class="data">6 days, 22 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 22 hours, 7 minutes</td>
+      <td class="data">6 days, 22 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
