--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 01:14:00 PM</p>
+    <p class="lastupdate">09/08/2020 01:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">95.0&#176;F</td>
+        <td class="data">95.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">95.0&#176;F</td>
+        <td class="data">95.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">95.0&#176;F</td>
+        <td class="data">95.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.2&#176;F</td>
+        <td class="data">46.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.590 inHg (-0.038)</td>
+        <td class="data">29.588 inHg (-0.038)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph ENE (68&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">82.9&#176;F</td>
+        <td class="data">83.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:11:04 PM">
-            95.0</span><br/>
+          <span title="01:18:44 PM">
+            95.4</span><br/>
           <span title="07:33:29 AM">
             63.0</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:11:04 PM" class="hival">
-            95.0</span>
+          <span title="01:18:44 PM" class="hival">
+            95.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -305,32 +305,32 @@
         <td class="data new_row hilo_day">
           <span title="12:02:01 AM">
             29.650</span><br/>
-          <span title="12:57:02 PM">
-            29.586</span>
+          <span title="01:15:02 PM">
+            29.585</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="12:57:02 PM (Tuesday)">
-            29.586</span>
+          <span title="01:15:02 PM (Tuesday)">
+            29.585</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/08/2020 12:57:02 PM">
-            29.586</span>
+          <span title="09/08/2020 01:15:02 PM">
+            29.585</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/08/2020 12:57:02 PM">
-            29.586</span>
+          <span title="09/08/2020 01:15:02 PM">
+            29.585</span>
         </td>
         <td class="data new_row hilo_rainyear">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/08/2020 12:57:02 PM">
-            29.586</span>
+          <span title="09/08/2020 01:15:02 PM">
+            29.585</span>
         </td>
         <td class="units"> inHg</td>
       </tr>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          16
+          19
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 22 hours, 27 minutes</td>
+      <td class="data">6 days, 22 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 22 hours, 27 minutes</td>
+      <td class="data">6 days, 22 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
