--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 01:24:00 PM</p>
+    <p class="lastupdate">09/08/2020 01:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">95.4&#176;F</td>
+        <td class="data">95.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">95.4&#176;F</td>
+        <td class="data">95.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">95.4&#176;F</td>
+        <td class="data">95.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.6&#176;F</td>
+        <td class="data">46.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.586 inHg (-0.039)</td>
+        <td class="data">29.583 inHg (-0.043)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph N (0&#176;)</td>
+        <td class="data">2 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">83.1&#176;F</td>
+        <td class="data">83.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,32 +305,32 @@
         <td class="data new_row hilo_day">
           <span title="12:02:01 AM">
             29.650</span><br/>
-          <span title="01:15:02 PM">
-            29.585</span>
+          <span title="01:28:02 PM">
+            29.583</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="01:15:02 PM (Tuesday)">
-            29.585</span>
+          <span title="01:28:02 PM (Tuesday)">
+            29.583</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/08/2020 01:15:02 PM">
-            29.585</span>
+          <span title="09/08/2020 01:28:02 PM">
+            29.583</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/08/2020 01:15:02 PM">
-            29.585</span>
+          <span title="09/08/2020 01:28:02 PM">
+            29.583</span>
         </td>
         <td class="data new_row hilo_rainyear">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/08/2020 01:15:02 PM">
-            29.585</span>
+          <span title="09/08/2020 01:28:02 PM">
+            29.583</span>
         </td>
         <td class="units"> inHg</td>
       </tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 22 hours, 37 minutes</td>
+      <td class="data">6 days, 22 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 22 hours, 37 minutes</td>
+      <td class="data">6 days, 22 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
